force-app/main/default/objects/Metadata_Sync_Log__c/Metadata_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Metadata Sync Log</label>
    <pluralLabel>Metadata Sync Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>