force-app/main/default/objects/Metadata_Sync_Log__c/fields/Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Time__c</fullName>
    <label>Last Sync Time</label>
    <type>DateTime</type>
</CustomField>