force-app/main/default/objects/Metadata_Sync_Log__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Text</type>
    <length>255</length>
</CustomField>